[tool.poetry]
name = "torch_logs"
version = "0.1.0"
description = ""
authors = ["yohan-pg <pg.yohan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
torch = "^1.11.0"
plotly = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
